View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032172 | Open CASCADE | OCCT:Visualization | public | 2021-02-25 21:52 | 2022-09-04 22:13 |
Reporter | kgv | Assigned To | mzernova | ||
Priority | normal | Severity | feature | ||
Status | verified | Resolution | fixed | ||
Target Version | 7.7.0 | ||||
Summary | 0032172: Visualization, TKOpenGl - implement simple shadow mapping for a spot light source | ||||
Description | It is necessary extending shadow maps introduced by 0032039 to support spot light sources. | ||||
Steps To Reproduce | test/opengl/data/shadows/spotlight | ||||
Tags | No tags attached. | ||||
Test case number | opengl/data/shadows/spotlight | ||||
|
Branch CR32172 has been created by mzernova. SHA-1: 8ad593a1137ca2938933d6583881c576b487a512 Detailed log of new commits: Author: mzernova Date: Wed Aug 24 15:04:10 2022 +0300 0032172: Visualization, TKOpenGl - implement simple shadow mapping for a spot light source # current progress # TODO: add tests |
|
Branch CR32172 has been updated forcibly by mzernova. SHA-1: b32ae2dd532538feb36989d12ec5a2640ad8c615 |
|
Branch CR32172 has been updated forcibly by mzernova. SHA-1: 3bca0291783acdada04fd11309194397e23f69cc |
|
http://jenkins-test-occt.nnov.opencascade.com/view/CR32172-master-mzernova/ |
|
The patch CR32172 is ready to review |
|
Please attach screenshots and update "Test case number" field. |
|
Branch CR32172 has been updated forcibly by mzernova. SHA-1: 06aa200142ee691919dd364162992f47b1ae4b01 |
|
spotlight_two_spots.png (12,994 bytes) spotlight_raytrace.png (7,923 bytes) spotlight_phong.png (12,952 bytes) spotlight_pbr.png (16,842 bytes) |
|
Please raise the patch - OCCT: branch CR32172. |
|
Combination - OCCT branch : IR-2022-09-02 master SHA - changes and them, and you can discard any commits you make in this 92915edda8e14a89c064d2f678a1e8b7bb3018ac changes and them, and you can discard any commits you make in this e0ceb716c70188b98130b1550914140d0502a6f9 Products branch : IR-2022-09-02 SHA - cd1ddcaedb4ace776d3dbd24cc152dd9d250fc53 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18745.83000000065 / 18742.610000000626 [+0.02%] Products Total CPU difference: 11992.640000000132 / 11987.570000000105 [+0.04%] Windows-64-VC14: OCCT Total CPU difference: 20840.40625 / 20803.390625 [+0.18%] Products Total CPU difference: 13573.53125 / 13554.96875 [+0.14%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32172 has been deleted by mnt. SHA-1: 06aa200142ee691919dd364162992f47b1ae4b01 |
occt: master 06aa2001 2022-08-24 15:04:10 Details Diff |
0032172: Visualization, TKOpenGl - implement simple shadow mapping for a spot light source added test: opengl/data/shadows/spotlight |
Affected Issues 0032172 |
|
mod - src/Graphic3d/Graphic3d_CLight.cxx | Diff File | ||
mod - src/Graphic3d/Graphic3d_ShaderManager.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderManager.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShadowMap.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_View.cxx | Diff File | ||
rm - src/Shaders/DirectionalLightShadow.glsl | Diff File | ||
mod - src/Shaders/FILES | Diff File | ||
add - src/Shaders/LightShadow.glsl | Diff File | ||
mod - src/Shaders/PBRSpotLight.glsl | Diff File | ||
mod - src/Shaders/PhongSpotLight.glsl | Diff File | ||
rm - src/Shaders/Shaders_DirectionalLightShadow_glsl.pxx | Diff File | ||
add - src/Shaders/Shaders_LightShadow_glsl.pxx | Diff File | ||
mod - src/Shaders/Shaders_PBRSpotLight_glsl.pxx | Diff File | ||
mod - src/Shaders/Shaders_PhongSpotLight_glsl.pxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | Diff File | ||
add - tests/opengl/data/shadows/spotlight | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-02-25 21:52 | kgv | New Issue | |
2021-02-25 21:52 | kgv | Assigned To | => mzernova |
2021-02-25 21:52 | kgv | Relationship added | child of 0031646 |
2021-08-24 14:19 | kgv | Target Version | 7.6.0 => 7.7.0 |
2022-08-17 11:57 | kgv | Target Version | 7.7.0 => 7.8.0 |
2022-08-19 11:58 | kgv | Status | new => assigned |
2022-08-24 15:04 | git | Note Added: 0110360 | |
2022-08-30 13:05 | git | Note Added: 0110439 | |
2022-08-30 15:20 | git | Note Added: 0110447 | |
2022-08-30 17:15 | mzernova | Note Added: 0110452 | |
2022-08-30 17:16 | mzernova | Assigned To | mzernova => kgv |
2022-08-30 17:16 | mzernova | Status | assigned => resolved |
2022-08-30 17:16 | mzernova | Steps to Reproduce Updated | |
2022-08-30 17:16 | mzernova | Note Added: 0110453 | |
2022-08-31 08:51 | kgv | Assigned To | kgv => mzernova |
2022-08-31 08:51 | kgv | Status | resolved => assigned |
2022-08-31 08:51 | kgv | Target Version | 7.8.0 => 7.7.0 |
2022-08-31 08:51 | kgv | Note Added: 0110461 | |
2022-08-31 10:27 | git | Note Added: 0110462 | |
2022-08-31 10:29 | mzernova | Note Added: 0110463 | |
2022-08-31 10:29 | mzernova | File Added: spotlight_two_spots.png | |
2022-08-31 10:29 | mzernova | File Added: spotlight_raytrace.png | |
2022-08-31 10:29 | mzernova | File Added: spotlight_phong.png | |
2022-08-31 10:29 | mzernova | File Added: spotlight_pbr.png | |
2022-08-31 10:30 | mzernova | Test case number | => opengl/data/shadows/spotlight |
2022-08-31 10:30 | mzernova | Assigned To | mzernova => kgv |
2022-08-31 10:30 | mzernova | Status | assigned => resolved |
2022-08-31 11:01 | kgv | Assigned To | kgv => bugmaster |
2022-08-31 11:01 | kgv | Status | resolved => reviewed |
2022-08-31 11:01 | kgv | Note Added: 0110464 | |
2022-09-03 18:51 | smoskvin | Status | reviewed => tested |
2022-09-03 18:51 | smoskvin | Note Added: 0110596 | |
2022-09-04 22:10 | mzernova | Changeset attached | => occt master 06aa2001 |
2022-09-04 22:10 | mzernova | Assigned To | bugmaster => mzernova |
2022-09-04 22:10 | mzernova | Status | tested => verified |
2022-09-04 22:10 | mzernova | Resolution | open => fixed |
2022-09-04 22:13 | git | Note Added: 0110602 |